<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Profile Manager</string>
    <string name="title_add_profile">New Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="profile_name">Profile name</string>
    <string name="no_profile_name">Please enter profile name</string>
    <string name="menu_get_current">Retrieve current value</string>
    <string name="create_new_with_current">create new profile with current setting</string>
    <string name="title_dual_sim">Dual SIM settings</string>
    <string name="title_single_sim">Data network settings</string>
    <string name="c_card">CDMA card</string>
    <string name="g_card">GSM card</string>
    <string name="title_disable_data_network">Data network</string>
    <string name="title_default_data_network">Default data network</string>
    <string name="gsm_network">GSM network</string>
    <string name="cdma_network">CDMA network</string>
    <string name="title_apn">Access Point Names</string>
    <string name="title_cdma_apn">CDMA Access Point Names</string>
    <string name="title_gsm_apn">GSM Access Point Names</string>
    <string name="title_wireless_settings">Wireless settings</string>
    <string name="title_airplane">Airplane mode</string>
    <string name="title_wlan">WLAN</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_location_settings">Location settings</string>
    <string name="title_gps">Use GPS satellites</string>
    <string name="title_call_settings">Call settings</string>
    <string name="title_reject_call_with_sms">Reject call with message</string>
    <string name="title_sound_settings">Sound settings</string>
    <string name="title_slient_mode">Silent mode</string>
    <string name="title_ringer_volume">Ringer volume</string>
    <string name="title_vibrate_mode">Phone vibrate</string>
    <string name="vibrate_always_on">Always</string>
    <string name="vibrate_never">Never</string>
    <string name="vibrate_only_in_silent">Only in Silent mode</string>
    <string name="vibrate_unless_silent">Only when not in Silent mode</string>
    <string name="title_firewall">Firewall settings</string>
    <string name="title_incoming_call_firewall">Incoming call firewall</string>
    <string name="title_incoming_call_firewall_mode">Incoming call firewall mode</string>
    <string name="incoming_call_mode1">Only accept call from contacts</string>
    <string name="incoming_call_mode2">Block all incoming calls</string>
    <string name="incoming_call_mode3">Only accept call from VIP</string>
    <string name="incoming_call_mode4">Block calls from black list</string>
    <string name="title_sms_firewall">Message firewall</string>
    <string name="title_sms_firewall_mode">Message firewall mode</string>
    <string name="firewall_sms_mod1">Only accept SMS from contacts</string>
    <string name="firewall_sms_mod2">Block all incoming SMS</string>
    <string name="firewall_sms_mod3">Only accept SMS from VIP</string>
    <string name="firewall_sms_mod4">Block SMS from Black list</string>
    <string name="ignore">Ignore this setting</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="menu_new">New Profile</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_view">View profile</string>
    <string name="menu_edit">Edit profile</string>
    <string name="menu_delete">Delete profile</string>
    <string name="menu_apply">Apply profile</string>
    <string name="menu_multidelete">Multiple delete</string>
    <string name="btn_save">Save</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="selectall">All</string>
    <string name="restoring_profile">Restore profiles in grogress, please wait...</string>
    <string name="backuping_profile">Backup profiles in progress, please wait...</string>
    <string name="restore_profile_completed">Restore profiles successfully</string>
    <string name="restore_profile_failed">Restore profiles failed</string>
    <string name="backup_profile_completed">Backup profiles to /sdcard/ct_backup/profile_backup.xml successfully</string>
    <string name="backup_profile_failed">Backup profiles failed</string>
    <string name="backup_profile_no_record">No profile found in your phone</string>
    <string name="restore_profile_no_record">No profile found in your SD card</string>
    <string name="duplicated_file">Duplicated file</string>
    <string name="replace_old_backup_file">Previous profile backup file exists, do you want to replace it?</string>
    <string name="no_sd_card">SD card unmounted or not present</string>
    <string name="not_enough_free_space_sd">There is not enough free space in external storage.</string>
    <string name="applying_profile">Activating profile...</string>
    <string name="apply_profile_completed">Apply profile complete.</string>
    <string name="apply_profile_invalid">Note: The auto-apply is invalid during device power off</string>
    <string name="apply_profile_both_card_absent">both CDMA and GSM card are not ready.</string>
    <string name="apply_profile_c_card_absent">CDMA card is not ready.</string>
    <string name="apply_profile_g_card_absent">GSM card is not ready.</string>
    <string name="please_exit_airplane_mode">Please exit airplane mode.</string>
    <string name="profile_rename">Profile Rename</string>
    <string name="notifacation_rename">Rename the profile</string>
    <string name="done">Done</string>
    <string name="profile_auto_apply">Set up auto-apply</string>
    <string name="auto_apply_save">Done</string>
    <string name="auto_apply_cancel">Cancel</string>
    <string name="auto_apply_enable">Automatically apply</string>
    <string name="apply_time">ApplyTime</string>
    <string name="setRepeat">Repeat</string>
    <string name="every_day">every day</string>
    <string name="week_prefix" />
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="none">Not set</string>
    <string name="noti_auto_apply_title">Profile automatically applied</string>
    <string name="noti_auto_apply_content">Profile has been applied:</string>
    <string name="Current_unsaved">Current</string>
    <string name="profile_default">Standard</string>
    <string name="work">Office</string>
    <string name="home">Home</string>
    <string name="save_power">Power saved</string>
    <string name="map">Map use</string>
    <string name="outdoor">Outdoor</string>
    <string name="meeting">Meeting</string>
    <string name="cdma">CDMA</string>
    <string name="gsm">GSM</string>
    <string name="slot1_name">slot1</string>
    <string name="slot2_name">slot2</string>
    <string name="no_setting">No setting item</string>
    <string name="no_setting_message">No setting item for this profile</string>
    <string name="discard_confirmation_title">Discard change</string>
    <string name="discard_confirmation">Discard the changes made and quit?</string>
    <string name="delete_profile">Confirm deletion</string>
    <string name="delete_profile_confirm">Are you sure you want to delete this profile?</string>
    <string name="delete_activited_profile">Confirm deletion</string>
    <string name="delete_activited_profile_confirm">"The profile you want to delete is currently active.
Are you sure you want to delete the active profile?"</string>
    <string name="mutidelete_profile">Confirm deletion</string>
    <string name="mutidelete_profile_confirm">Are you sure you want to delete selected profiles?</string>
    <string name="mutidelete_activited_profile">Confirm deletion</string>
    <string name="mutidelete_activited_profile_confirm">"Profile %1$s is currently active.
Are you sure you want to delete it?"</string>
    <string name="all_volume_title">Volume</string>
    <string name="ring_volume_title">Ringer volume</string>
    <string name="ring_volume_summary" />
    <string name="deleting_profile">Delete profiles in progress, please wait...</string>
    <string name="delete_profile_completed">Delete profiles successfully</string>
    <string name="sound_ringtones">Ringtones</string>
    <string name="sound_music">MP3</string>
    <string name="ringtone_gsm_title">Ringtone</string>
    <string name="ringtone_unknown">Unknown ringtone</string>
    <string name="ringtone_default_with_actual">Default ringtone ( %1$s )</string>
</resources>
