<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/apollo.profilesetting.view">
    <PreferenceCategory android:title="@string/profile_auto_apply" android:key="auto_apply_category">
        <CheckBoxPreference android:persistent="false" android:title="@string/auto_apply_enable" android:key="auto_apply_enable" />
        <Preference android:persistent="false" android:title="@string/apply_time" android:key="time" />
        <apollo.profilesetting.view.RepeatPreference android:persistent="false" android:title="@string/setRepeat" android:key="setRepeat" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_wireless_settings" android:key="wireless_category">
        <ListPreference android:persistent="false" android:entries="@array/on_off_entries" android:title="@string/title_airplane" android:key="wireless_airplane_mode" android:order="1" android:entryValues="@array/on_off_values" />
        <ListPreference android:persistent="false" android:entries="@array/on_off_entries" android:title="@string/title_wlan" android:key="wireless_wlan" android:order="2" android:entryValues="@array/on_off_values" />
        <ListPreference android:persistent="false" android:entries="@array/on_off_entries" android:title="@string/title_bluetooth" android:key="wireless_bluetooth" android:order="3" android:entryValues="@array/on_off_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_location_settings" android:key="location_category">
        <ListPreference android:persistent="false" android:entries="@array/on_off_entries" android:title="@string/title_gps" android:key="location_gps" android:order="1" android:entryValues="@array/on_off_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_sound_settings" android:key="sound_category">
        <ListPreference android:persistent="false" android:entries="@array/on_off_entries" android:title="@string/title_slient_mode" android:key="sound_slient_mode" android:order="1" android:entryValues="@array/on_off_values" />
        <apollo.profilesetting.view.RingerVolumePreference android:persistent="false" android:title="@string/title_ringer_volume" android:key="ringer_volume" android:summary="@string/ring_volume_summary" android:order="2" android:dialogTitle="@string/ring_volume_title" android:streamType="ring" />
        <ListPreference android:persistent="false" android:entries="@array/vibrate_entries" android:title="@string/title_vibrate_mode" android:key="sound_vibrate_mode" android:order="3" android:entryValues="@array/vibrate_values" />
    	<apollo.profilesetting.view.SoundPreference android:persistent="false" android:title="@string/ringtone_gsm_title" android:key="gsm_ringtone_settings" android:summary="@string/ringtone_gsm_summary" android:order="4" />
    </PreferenceCategory>
</PreferenceScreen>
