<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="right|center" android:orientation="horizontal" android:id="@id/selectall" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/ButtonBar">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="right|center" android:id="@id/label" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/selectall" />
        <CheckBox android:id="@id/checkbox_deleteall" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/checkableBehavior" />
    </LinearLayout>
    <LinearLayout android:id="@id/buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" style="@android:style/ButtonBar">
        <Button android:id="@id/ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_delete" android:layout_weight="1.0" />
        <Button android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_cancel" android:layout_weight="1.0" />
    </LinearLayout>
    <ListView android:id="@id/listview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/buttons" android:layout_below="@id/selectall" android:fastScrollEnabled="true" />
</RelativeLayout>